Allow user to change email
