# apiv2.go
@@ -3,12 +3,7 @@ package klinkregistry
 import (
 	"encoding/json"
 	"fmt"
-	"log"
 	"net/http"
-	"time"
-
-	"github.com/go-chi/chi"
-	uuid "github.com/satori/go.uuid"
 )
 
 // Error is a response sent by the API in case of error
@@ -16,6 +11,10 @@ type Error struct {
 	Status  int    `json:"-"`
 	Message string `json:"message"`
 	Context string `json:"context,omitempty"`
+}
+
+func (e Error) Error() string {
+	return e.Message
 }
 
 // Errors that the API may emit
@@ -26,11 +25,13 @@ var (
 	API2ErrTokenGeneration    = Error{500, "Token generation error", ""}
 	API2ErrUUIDGeneration     = Error{500, "UUID generation failed", ""}
 	API2ErrInvalidJSON        = Error{400, "Invalid JSON request", ""}
+	API2ErrPasswordRequired   = Error{400, "Password is required", ""}
 	API2ErrUnauthorized       = Error{401, "Unauthorized", ""}
 	API2ErrInvalidCredentials = Error{403, "Invalid Credentials", ""}
 	API2ErrAccountDisabled    = Error{403, "Account disabled", ""}
 	API2ErrInvalidURL         = Error{403, "URL could not be understood", ""}
 	API2ErrNotFound           = Error{404, "Resource not found", ""}
+	API2ErrUserExists         = Error{400, "User already exists", ""}
 	API2ErrTokenExpired       = Error{404, "Token has expired", ""}
 )
 
@@ -39,6 +40,17 @@ var (
 type RegistrationRequest struct {
 	Email string `json:"email"`
 	Name  string `json:"name"`
+}
+
+// PasswordResetRequest contains all information to initiate a password reset
+type PasswordResetRequest struct {
+	Email string `json:"email"` // current email of the user
+}
+
+// EmailChangeRequest contains all information required to initiate a change
+// of the primary user email address.
+type EmailChangeRequest struct {
+	NewEmail string `json:"email"`
 }
 
 // API2EmptyResponse can be used for jsonResponse, if the
@@ -127,6 +139,12 @@ func (s *Server) handlePostRegistration() http.HandlerFunc {
 			return
 		}
 
+		_, err := s.store.GetRegistrantByEmail(request.Email)
+		if err == nil {
+			jsonResponse(w, API2ErrUserExists)
+			return
+		}
+
 		var registrant = &Registrant{
 			Name:     request.Name,
 			Active:   false,      // Not active until activated by admin
@@ -140,42 +158,8 @@ func (s *Server) handlePostRegistration() http.HandlerFunc {
 			return
 		}
 
-		uuid, err := uuid.NewV4()
-		if err != nil {
-			fmt.Println("Log1")
-			jsonResponse(w, API2ErrUUIDGeneration)
-			return
-		}
-
-		var emailVerification = &EmailVerification{
-			RegistrantID: registrant.ID,
-			Email:        registrant.Email,
-			Token:        uuid.String(),
-			Timestamp:    time.Now().UTC().Unix(),
-		}
-		if err := s.store.CreateEmailVerification(emailVerification); err != nil {
-			jsonResponse(w, API2ErrDatabase)
-			return
-		}
-
-		// build verification link for the email
-		// TODO: make domain configurable
-		var verificationLink = fmt.Sprintf(
-			"http://%s%s/verify-email/%s",
-			s.config.HTTPDomain,
-			s.config.HTTPBasePath,
-			emailVerification.Token,
-		)
-
-		// TODO: localize somehow?
-		if err := s.email.Email(
-			emailVerification.Email,
-			"K-Link-Registry: Please verify your email address",
-			`html `+verificationLink,
-			`hello, welcome to the K-Link registry. Please use this link to verify your mail address and set a password: `+verificationLink,
-		); err != nil {
-			jsonResponse(w, API2ErrEmail)
-			return
+		if err := s.CreateVerification(registrant, registrant.Email); err != nil {
+			jsonResponse(w, err)
 		}
 
 		// success
@@ -186,127 +170,34 @@ func (s *Server) handlePostRegistration() http.HandlerFunc {
 
 func (s *Server) handlePostPasswordReset() http.HandlerFunc {
 	return func(w http.ResponseWriter, req *http.Request) {
-	}
-}
-
-func (s *Server) handleGetVerifyEmail() http.HandlerFunc {
-	return func(w http.ResponseWriter, req *http.Request) {
-		// get token from URL
-		token := chi.URLParam(req, "token")
-
-		// fetch EmailVerification
-		verification, err := s.store.GetEmailVerificationByToken(token)
-		if s.store.IsNotFound(err) {
-			jsonResponse(w, API2ErrNotFound)
-			return
-		} else if err != nil {
-			jsonResponse(w, API2ErrDatabase)
-			return
-		}
-
-		// terminate if the EmailVerification is invalid
-		if verification.IsExpired() {
-			jsonResponse(w, API2ErrTokenExpired)
-			return
-		}
-
-		// fetch User
-		user, err := s.store.GetRegistrantByID(verification.RegistrantID)
-		if s.store.IsNotFound(err) {
-			log.Printf("Verification: Registrant %d No longer exists", verification.RegistrantID)
-			jsonResponse(w, API2ErrNotFound)
-			return
-		} else if err != nil {
-			jsonResponse(w, API2ErrDatabase)
-			return
-		}
-
-		// return Response, based on the fact if this is the user's initial
-		// email verification (after signup) the "require_password" parameter
-		// will be set
-		var response EmailVerificationModel
-		response.DisplayName = user.Name
-		response.RequirePassword = (len(user.Password) == 0)
-
-		jsonResponse(w, response)
-		return
-	}
-}
-
-func (s *Server) handlePostVerifyEmail() http.HandlerFunc {
-	return func(w http.ResponseWriter, req *http.Request) {
-		// optional password, will be required when the user has no password
-		// set yet, will not be used otherwise.
-		var request SetPasswordRequest
+		var request PasswordResetRequest
 		var response API2EmptyResponse
 
-		// get token from URL
-		token := chi.URLParam(req, "token")
-
-		// fetch EmailVerification
-		verification, err := s.store.GetEmailVerificationByToken(token)
-		if s.store.IsNotFound(err) {
-			jsonResponse(w, API2ErrNotFound)
-			return
-		} else if err != nil {
-			jsonResponse(w, API2ErrDatabase)
-			return
-		}
-
-		// terminate if the EmailVerification is invalid
-		if verification.IsExpired() {
-			jsonResponse(w, API2ErrTokenExpired)
-			return
-		}
-
-		// fetch User
-		user, err := s.store.GetRegistrantByID(verification.RegistrantID)
-		if s.store.IsNotFound(err) {
-			jsonResponse(w, API2ErrNotFound)
-			return
-		} else if err != nil {
-			jsonResponse(w, API2ErrDatabase)
-			return
-		}
-
-		// deserialize request
 		if err := json.NewDecoder(req.Body).Decode(&request); err != nil {
 			jsonResponse(w, API2ErrInvalidJSON)
 			return
 		}
 
-		// set password if user has no password yet
-		if len(user.Password) == 0 {
-			user.SetPass(request.Password)
-		}
-
-		// change email to mail in EmailVerification
-		user.Email = verification.Email
-
-		// persist user
-		if err := s.store.ReplaceRegistrant(user); err != nil {
+		registrant, err := s.store.GetRegistrantByEmail(request.Email)
+		if s.store.IsNotFound(err) {
+			// Do not return an API2ErrNotFound, since we dont want to
+			// disclose the info that the user does not exist.
+			// fake success:
+			jsonResponse(w, response)
+			return
+		} else if err != nil {
 			jsonResponse(w, API2ErrDatabase)
 			return
 		}
+
+		// Empty email field means we want to reset PW only.
+		if err := s.CreateVerification(registrant, ""); err != nil {
+			jsonResponse(w, API2ErrDatabase)
+			return
+		}
+
+		// success
 		jsonResponse(w, response)
 		return
-	}
-}
-
-func (s *Server) handlePostSetPassword() http.HandlerFunc {
-	return func(w http.ResponseWriter, req *http.Request) {
-		//// get token from URL
-		//token := chi.URLParam(req, "token")
-		//
-		//// fetch PasswordReset
-		//reset, err := s.store.GetPasswordResetByToken(token)
-		//if err != nil {
-		//	jsonResponse(w, API2ErrDatabase)
-		//	return
-		//}
-		//
-		//// terminate if PasswordReset is invalid
-		//
-		//// change user Password
 	}
 }
